# lin_alg

./: Cargo.toml  README.md
src/: core.rs  decomposition.rs  lib.rs
